--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "framer-motion": "^10.1.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.8",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/styled-components": "^5.1.26",
     "conventional-changelog-cli": "^2.2.2",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.2",
